4.4.3 -> 4.4.4:
	- start rpm-4.4.4 development.
	- re-enable libtool/pkgconfig/python/java automagic requires extractors.
	- re-enable pubkey server configuration.
	- perl: diddle Makefile.PL to build/link within rpm source tree.
	- perl: add build dependency on perl(ExtUtils::MakeMaker) >= 6.17.
	- don't build rpmgetconf by default.

4.4.2 -> 4.4.3:
	- start 4.4.3 devel.
	- put a --stats stopwatch on rpmReadPackageFile() I/O.
	- ignore %excluded files for size
	- add debugging labels for pre/post trans scriptlet execution.
	- sqlite: path to find internal sqlite3.h
	- debuginfo: canonicalize paths (#165434).
	- debuginfo: pass --remove-comment switch (#165418).
	- java: add automagic req/prov extractors and closure helper (#164953).
	- statically link rpmi and rpm again again again.
	- update uk.po (#142740).
	- fix: check-prereqs typo (#147196).
	- remove all uses of RPMSENSE_PREREQ.
	- fix: revert to older/slower perldeps avoid getOutputFrom() error.
	- zlib: uniqify several more symbols.
	- add symbol versions everywhere, proof-of-concept.
	- don't re-export zlib-in-rpmio and bdb-in-rpmdb symbols.
	- remove gcc warning from popt and rpmio compilation.
	- rpmdb.c: remove need to include rpmio_internal.h.
	- add --dupes popt alias.
	- identify headers from whence they came.
	- fix: don't fire triggers on test (#25756).
	- rpmluaFree: substitute globalLuaState for NULL arg.
	- add path to *.rpm package into rpmdb/repackaged headers.
	- track many-to-many relation between installed and erased packages.
	- eliminate rpmtsGetKeys() and ancient ts.getKeys() python method.
	- upgrade to db-4.3.29.
	- add --target to rpm queries.
	- rollback: add --rbexclude tid option.
	- rollback: merge latest hackery for composting.
	- upgrade same NEVR with --force if not literally identical (#134388).
	- add cpuinfo(foo) dependency name space to map /proc/cpuinfo provides.
	- add rpmlib(foo) dependency name space to map rpmlib provides.