@@ -856,10 +856,15 @@ print (t)\
 # but the transaction lock needs to be per-database, not global, for
 # some rpmdb operations.
 #
+# The fcntl lock is now off by default, posix mutexes are sufficient.
+# to protect Berkeley DB data, and multiple databases with concurrent
+# access is a more important feature to rpm than serializing transaction
+# access.
+#
 # XXX Note: the file name is chosesn as __db.000 to expedite
 # support issues, as many users are doing "rm -f /var/lib/rpm/__db*"
 # these days.
-%_rpmlock_path	%{_dbpath}/__db.000
+#%_rpmlock_path	%{_dbpath}/__db.000
 
 #==============================================================================
 # ---- Cache configuration macros.
